hw12_13_14_15_calendar/k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: calendar.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 8080
